FinalLocalVariable
StringLiteralEquality
FinalClass
ArrayTypeStyle
UncommentedMain
UpperEll
ModifierOrder

Apart from that a few bugs were fixed as well as features implemented.

Please note the new Voting section in the Checkstyle plugins preferences.
If you like to tell us your opinion about the plugin please use this to cast your vote.

Bugs:
1600492 	Javadocs not displayed when mouse hovers over a java element
1601570 	Package selection dialog (Pacakge filter) shows too much
1579086 	MissingSwitchDefault Quickfix doesn't work proper
1608976 	Need Braces QuickFix is not working as expected

RFE:
1541488 	Plugin should check builder order
1423948 	Quickfix
1464521 	Copying configurations
1607736 	Implement quickfix for UpperEll
1607735 	Implement quickfix for UncommentedMain
1607729 	Implement quickfix for StringLiteralEquality
1607728 	Implement quickfix for FinalLocalVariable
1607732 	Implement quickfix for FinalClass

Eclipse Checkstyle Plugin v4.1.1
----------------------------------------------
Fixes some minor issues.

Bugs:
1538317 NullPointerException
1530368 Refresh config button on project

RFE:
1530366 Java Problem Type



Eclipse Checkstyle Plugin v4.1.0 final
----------------------------------------------
Final release of Eclipse Checkstyle Plugin 4.1.0.
Uses the recently released Checkstyle 4.2.

Bugs:
1504122  Violations tab column widths

Eclipse Checkstyle Plugin v4.0.93 (4.1.0 beta4)
----------------------------------------------

Minor bugfix release. Uses a new snapshot from Checkstyle CVS head.

Bugs:
1464012  Fixed ProjectClassLoader issue
1466967  Violations tab and closed project  
1487954  Eclipse 3.2RC4 doesn't find any updates  
1478288  "Invalid thread access" when Checkstyle run. 


Eclipse Checkstyle Plugin v4.0.92 (4.1.0 beta3)
----------------------------------------------

Sports a recent Checkstyle build from Checkstyle Head stream (2006/03/24).